Fix flakiness of three web tests

This CL fixes the flakiness caused by |MockFileChooserFactory.
setPathsToBeChosen|. This affects the following web tests:
- http/tests/custom-elements/form-submission-file.html
- wpt_internal/forms/file/file-webkitRelativePath-root.html
- wpt_internal/forms/file/file-webkitRelativePath.html

The browser process verifies that <input type=file> have files chosen
by FileChooser in the browser process via DocumentState in a HistoryItem
in order to prevent contaminated renderer processes from reading
arbitrary files. However, MockFileChooserFacttory can set file paths to
<input type=file> without communicating with the browser process. So,
the verification failed.

This CL add a window.internals API in order to disable the verification.
After the API is called, file paths in <input type=file> are not stored
to DocumentState.

This CL doesn't not affect production.

Bug: 910139
Change-Id: Ia68d9998384c30045b0b0bfec26c22ace0eed519
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3237483
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Auto-Submit: Kent Tamura <tkent@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/main@{#934416}