third_party/blink/renderer/core/html/forms/form_controller.h
@@ -122,6 +122,11 @@ class CORE_EXPORT FormController final
   // to restore before 'pageshow' event.
   void RestoreImmediately();
 
+  // This always retutrns false in production.
+  bool DropReferencedFilePaths() const { return drop_referenced_file_paths_; }
+  void SetDropReferencedFilePathsForTesting() {
+    drop_referenced_file_paths_ = true;
+  }
   static Vector<String> GetReferencedFilePaths(
       const Vector<String>& state_vector);
 
@@ -138,6 +143,7 @@ class CORE_EXPORT FormController final
   SavedFormStateMap saved_form_state_map_;
   Member<FormKeyGenerator> form_key_generator_;
   bool did_restore_all_ = false;
+  bool drop_referenced_file_paths_ = false;
 };
 
 // Exposed for testing.
