third_party/blink/renderer/core/testing/internals.cc
@@ -2856,6 +2856,15 @@ Vector<String> Internals::getReferencedFilePaths() const {
       ->GetReferencedFilePaths();
 }
 
+void Internals::disableReferencedFilePathsVerification() const {
+  if (!GetFrame())
+    return;
+  GetFrame()
+      ->GetDocument()
+      ->GetFormController()
+      .SetDropReferencedFilePathsForTesting();
+}
+
 void Internals::startTrackingRepaints(Document* document,
                                       ExceptionState& exception_state) {
   DCHECK(document);
